--- a/InstagramParse/Base.lproj/Main.storyboard
+++ b/InstagramParse/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -105,8 +106,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="319" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nH2-xo-2xJ">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="319" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nH2-xo-2xJ">
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -117,19 +118,31 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="318.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBN-Vl-15I">
-                                                    <rect key="frame" x="8" y="166" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBN-Vl-15I">
+                                                    <rect key="frame" x="8" y="266" width="304" height="20.5"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U1s-Kr-bwk">
-                                                    <rect key="frame" x="8" y="8" width="240" height="128"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U1s-Kr-bwk">
+                                                    <rect key="frame" x="8" y="8" width="304" height="250"/>
                                                     <animations/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="250" id="sSY-rh-7hQ"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                             <animations/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GBN-Vl-15I" secondAttribute="bottom" constant="8" id="5ib-jI-qae"/>
+                                                <constraint firstItem="U1s-Kr-bwk" firstAttribute="leading" secondItem="qn9-mH-m6B" secondAttribute="leadingMargin" id="604-wG-SJ3"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="U1s-Kr-bwk" secondAttribute="trailing" id="Bd0-H2-6by"/>
+                                                <constraint firstItem="GBN-Vl-15I" firstAttribute="leading" secondItem="qn9-mH-m6B" secondAttribute="leading" constant="8" id="OTn-kQ-RbM"/>
+                                                <constraint firstItem="GBN-Vl-15I" firstAttribute="top" secondItem="U1s-Kr-bwk" secondAttribute="bottom" constant="8" id="bQH-GM-dUg"/>
+                                                <constraint firstAttribute="trailing" secondItem="GBN-Vl-15I" secondAttribute="trailing" constant="8" id="vbE-ZZ-xtC"/>
+                                                <constraint firstItem="U1s-Kr-bwk" firstAttribute="top" secondItem="qn9-mH-m6B" secondAttribute="topMargin" id="xk0-2a-EX4"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <animations/>
                                         <connections>
@@ -142,6 +155,12 @@
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TKc-XA-RBJ" firstAttribute="top" secondItem="nH2-xo-2xJ" secondAttribute="bottom" id="0Tf-Ab-QjG"/>
+                            <constraint firstItem="nH2-xo-2xJ" firstAttribute="leading" secondItem="jrH-DM-acf" secondAttribute="leading" id="Etk-t1-dHU"/>
+                            <constraint firstAttribute="trailing" secondItem="nH2-xo-2xJ" secondAttribute="trailing" id="XHY-uy-eAa"/>
+                            <constraint firstItem="nH2-xo-2xJ" firstAttribute="top" secondItem="ToK-UF-1Rc" secondAttribute="bottom" id="wFL-bU-Bsu"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" id="GO5-wo-eDV"/>
                     <connections>
